--- a/docs/content/p1.md
+++ b/docs/content/p1.md
@@ -198,11 +198,53 @@ Con el servidor corriendo (`npm run start:dev`), prueba:
   curl -X POST http://localhost:3000/tasks -H "Content-Type: application/json" -d '{"name":"Comprar leche"}'
   ```
 
+### 2.6. Resolución de Errores: Desactivación de la Regla prettier/prettier
+Modificar archivo (`eslint.config.mjs`),:
+
+  ```js hl_lines="32"
+  // @ts-check
+  import eslint from '@eslint/js';
+  import eslintPluginPrettierRecommended from 'eslint-plugin-prettier/recommended';
+  import globals from 'globals';
+  import tseslint from 'typescript-eslint';
+
+  export default tseslint.config(
+    {
+      ignores: ['eslint.config.mjs'],
+    },
+    eslint.configs.recommended,
+    ...tseslint.configs.recommendedTypeChecked,
+    eslintPluginPrettierRecommended,
+    {
+      languageOptions: {
+        globals: {
+          ...globals.node,
+          ...globals.jest,
+        },
+        sourceType: 'commonjs',
+        parserOptions: {
+          projectService: true,
+          tsconfigRootDir: import.meta.dirname,
+        },
+      },
+    },
+    {
+      rules: {
+        '@typescript-eslint/no-explicit-any': 'off',
+        '@typescript-eslint/no-floating-promises': 'warn',
+        '@typescript-eslint/no-unsafe-argument': 'warn',
+        'prettier/prettier': 'off'
+      },
+    },
+  );
+  ```
+
 ## 3. Conclusión
 - **Express**: Ideal para APIs rápidas y minimalistas.
 - **NestJS**: Perfecto para proyectos escalables con TypeScript y arquitectura modular.
 
 Explora middlewares en Express o módulos/servicios en NestJS para agregar funcionalidades como autenticación o conexión a bases de datos.
+
 
 ### Actividad para Estudiantes: Crear una API Básica con NestJS
 
