--- a/docs/content/p2.md
+++ b/docs/content/p2.md
@@ -425,7 +425,7 @@ bootstrap();
 - Para producción, configura variables de entorno seguras y considera agregar validación de datos con `@nestjs/class-validator`.
 
 
-## Actividad de Consulta Corregida: Conceptos de NestJS, Prisma y MySQL
+## Actividad de Consulta: Conceptos de NestJS, Prisma y MySQL
 
 Esta actividad contiene 16 preguntas generales diseñadas para evaluar y reforzar los conceptos aplicados en la creación de una aplicación básica con NestJS, Prisma y MySQL. Responde cada pregunta de forma clara y concisa.
 
