--- a/docs/content/p0.md
+++ b/docs/content/p0.md
@@ -577,3 +577,108 @@ Realiza las siguientes tareas en Postman, enviando solicitudes al recurso `/user
     - **Código de estado esperado**: `404 Not Found`.  
 
 ---
+
+## **Tutorial: Instalar y usar `prompt-sync` en Node.js**
+
+#### **Paso 1: Requisitos previos**
+Asegúrate de tener instalado:
+- **Node.js** en tu computadora. Puedes descargarlo desde [nodejs.org](https://nodejs.org/) si no lo tienes.
+- Un editor de código como Visual Studio Code, Sublime Text o cualquier otro.
+- Una terminal (puede ser la terminal integrada en tu editor o una externa como CMD, PowerShell o Bash).
+
+#### **Paso 2: Crear un proyecto Node.js**
+1. Crea una carpeta para tu proyecto:
+   ```bash
+   mkdir mi-proyecto
+   cd mi-proyecto
+   ```
+2. Inicializa un proyecto Node.js ejecutando:
+   ```bash
+   npm init -y
+   ```
+   Esto creará un archivo `package.json` con la configuración predeterminada.
+
+#### **Paso 3: Instalar `prompt-sync`**
+1. En la terminal, dentro de la carpeta de tu proyecto, ejecuta el siguiente comando para instalar el módulo `prompt-sync`:
+   ```bash
+   npm install prompt-sync
+   ```
+   Esto descargará e instalará el módulo en la carpeta `node_modules` y lo añadirá como dependencia en tu `package.json`.
+
+#### **Paso 4: Crear un archivo para usar `prompt-sync`**
+1. Crea un archivo JavaScript, por ejemplo, `index.js`:
+   ```bash
+   touch index.js
+   ```
+2. Abre `index.js` en tu editor de código y escribe el siguiente ejemplo:
+
+   ```javascript
+   // Importar el módulo prompt-sync
+   const prompt = require('prompt-sync')();
+
+   // Solicitar entrada al usuario
+   const nombre = prompt('¿Cuál es tu nombre? ');
+   console.log(`¡Hola, ${nombre}!`);
+
+   // Solicitar un número
+   const edad = prompt('¿Cuál es tu edad? ');
+   console.log(`Tienes ${edad} años.`);
+   ```
+
+   **Explicación del código**:
+   - `require('prompt-sync')()` importa el módulo y lo inicializa para usar la entrada síncrona.
+   - `prompt('Pregunta')` muestra un mensaje en la consola y espera que el usuario ingrese un valor, que se almacena en una variable.
+   - La entrada siempre se recibe como una cadena de texto (string). Si necesitas un número, deberás convertirlo (por ejemplo, con `parseInt()` o `parseFloat()`).
+
+#### **Paso 5: Ejecutar el programa**
+1. Guarda el archivo `index.js`.
+2. En la terminal, ejecuta el programa con:
+   ```bash
+   node index.js
+   ```
+3. Verás que el programa te pide que ingreses tu nombre y edad, y luego muestra un mensaje con los valores ingresados.
+
+#### **Paso 6: Ejemplo avanzado**
+Si quieres manejar números o entradas más complejas, aquí tienes un ejemplo más avanzado:
+
+```javascript
+const prompt = require('prompt-sync')();
+
+// Solicitar dos números y sumarlos
+const num1 = parseFloat(prompt('Ingresa el primer número: '));
+const num2 = parseFloat(prompt('Ingresa el segundo número: '));
+
+const suma = num1 + num2;
+console.log(`La suma de ${num1} y ${num2} es: ${suma}`);
+```
+
+**Notas**:
+- `parseFloat()` convierte la entrada (que es un string) en un número decimal.
+- Si necesitas enteros, usa `parseInt()` en lugar de `parseFloat()`.
+
+#### **Paso 7: Solución de problemas comunes**
+1. **Error: "prompt-sync no encontrado"**
+   - Asegúrate de haber ejecutado `npm install prompt-sync`.
+   - Verifica que estás ejecutando `node index.js` desde la carpeta correcta donde está `node_modules`.
+2. **Entrada no válida**
+   - Si esperas números, usa `parseInt()` o `parseFloat()` para convertir las entradas.
+   - Puedes agregar validaciones, como:
+     ```javascript
+     const numero = parseFloat(prompt('Ingresa un número: '));
+     if (isNaN(numero)) {
+       console.log('Por favor, ingresa un número válido.');
+     } else {
+       console.log(`Número ingresado: ${numero}`);
+     }
+     ```
+
+#### **Paso 8: Opcional - Actualizar o desinstalar**
+- **Actualizar `prompt-sync`**:
+  ```bash
+  npm update prompt-sync
+  ```
+- **Desinstalar `prompt-sync`**:
+  ```bash
+  npm uninstall prompt-sync
+  ```
+
